@@ -1,6 +1,7 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
 
-10032193 -> jonnyboy -> fixed bug in releases.php not catching duplicates properly
+10032193 -> jonnyboy -> stage 7b query 3 not needed to run every loop, it is slow, so added check to only run sometimes
+						fixed bug in releases.php not catching duplicates properly
 						hide getid3.php line 1641 errors
                         fixed a couple bugs in python scripts
 09302103 -> jonnyboy -> fixed binaries_safe_threaded.py
